# research-lab

./: .env.example  .gitignore  AGENTS.md  APIFY_ACTOR_EVALUATION.md  CLAUDE.md  DATAROMA_HOLDINGS_SCRAPER_DECISION.md  EDGE_THESIS.md  HERMES_RESEARCH_LAB_PROMPT.md  HERMES_ROLE_CONTRACT.md  HETZNER_RUNBOOK.md  IBKR_PAPER_RUNBOOK.md  README.md  SEC_13F_WATCHER_DESIGN.md  docs_24_7_AUTONOMY.md  docs_apify_sentiment_sources_pilot.md  pyproject.toml
config/: research_sources.json
deploy/: install_systemd_timers.sh
docs/: hermes_execution_audit.md  hermes_scheduling.md  risk_management_research_layer.md
execution/: __init__.py
hermes_knowledge/: __init__.py  blocker_taxonomy.py  book_selector.py  books.py  cli.py  extract_notes.py  feedback.py  knowledge_entry.schema.json  note_generator.py  note_store.py  passage_extractor.py  prompt.py  request_runner.py  retriever.py  runtime.py  schema.py
registry/: allocation_model.csv  eodhd_data_quality.csv  eodhd_history_manifest.csv  experiments.jsonl  hypothesis_queue.jsonl  leaderboard.csv  strategy_registry.jsonl
research_lab/: __init__.py  alerting.py  apify_dataroma.py  backtest.py  config.py  congress.py  cost_monitor.py  creative_research.py  dashboard.py  dashboard_server.py  data.py  data_eodhd.py  data_quality.py  data_quality_eodhd.py  deployment_gate.py  drawdown_diagnostics.py  edge.py  eodhd_access_diagnostics.py  eodhd_approval_bound_search_metadata_adapter_v2.py  eodhd_bounded_search_metadata_adapter_v1.py  equity_factor_ranking.py  event_study.py  failure_memory.py  fmp_access_diagnostics.py  jsonl.py  (+28 more)
(+447 files in other folders)
