[project]
name = "research-lab"
version = "0.1.0"
description = "Deterministic trading research lab runner with hard validation gates."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pypdf>=6.0,<7",
]

[project.optional-dependencies]
data = [
  "yfinance>=0.2.40",
]
ibkr = [
  "ib_insync>=0.9.86",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["research_lab*"]
